# garak-financial-probes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  security.yaml
examples/: enterprise_config.yaml  financial_config.yaml
garak_corpfin/: __init__.py
garak_corpfin/detectors/: __init__.py  earnings.py  insider.py  ma.py
garak_corpfin/judges/: __init__.py
garak_corpfin/probes/: __init__.py  board.py  earnings.py  insider.py  ma.py  valuation.py
garak_enterprise/: __init__.py
garak_enterprise/cli/: __init__.py
garak_financial/: __init__.py
garak_financial/automation/: __init__.py
garak_financial/buffs/: __init__.py  encoding.py  financial.py  jailbreak.py  persona.py
garak_financial/cli/: __init__.py
garak_financial/detectors/: __init__.py  advice.py  compliance.py  factcheck.py  misconduct.py
garak_financial/judges/: __init__.py  financial.py
garak_financial/probes/: __init__.py  calculation.py  compliance.py  disclosure.py  hallucination.py  impartiality.py  leakage.py  misconduct.py  sycophancy.py
garak_financial/reporting/: __init__.py
garak_financial/utils/: __init__.py
garak_hr/: __init__.py
garak_hr/detectors/: __init__.py  bias.py  privacy.py  termination.py
garak_hr/judges/: __init__.py
garak_hr/probes/: __init__.py  bias.py  compensation.py  privacy.py  termination.py  workplace.py
garak_legal/: __init__.py
garak_legal/detectors/: __init__.py  advice.py  fabrication.py  privilege.py
garak_legal/judges/: __init__.py
garak_legal/probes/: __init__.py  advice.py  disclosure.py  fabrication.py  litigation.py  privilege.py
garak_risk/: __init__.py
garak_risk/detectors/: __init__.py  credit_risk.py  model_risk.py  regulatory.py
garak_risk/judges/: __init__.py
garak_risk/probes/: __init__.py  credit_risk.py  model_risk.py  operational.py  regulatory.py  stress_test.py
tests/: __init__.py  test_automation.py  test_buffs.py  test_cli.py  test_corpfin_detectors.py  test_corpfin_probes.py  test_detectors.py  test_enterprise_cli.py  test_hr_detectors.py  test_hr_probes.py  test_judge.py  test_legal_detectors.py  test_legal_probes.py  test_probes.py  test_reporting.py  test_risk_detectors.py  test_risk_probes.py
